fix(tema1): corregir formateo de palabras

--- a/preguntas-tema1/main.tex
+++ b/preguntas-tema1/main.tex
@@ -179,8 +179,8 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            \begin{itemize}
 			            \item \textbf{Eventos actuales:} Aquellos que están sucediendo en el sistema en un momento dado.
 			            \item \textbf{Eventos futuros:} Cambios que
-			                  se presentarán en el sistema después del tiempo de simulación, de acuerdo con una pro­
-			                  gramación específica.
+			                  se presentarán en el sistema después del tiempo de simulación, de acuerdo con una
+			                  programación específica.
 		            \end{itemize} \citetitle[p.~4]{garcia2013simpromodel}
 	      \end{itemize}
 
@@ -287,7 +287,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            Si no hay intersección de intervalos podremos decir con
 		            certeza estadística que los resultados no son iguales; sin embargo, si los intervalos
 		            se sobreponen será imposible definir estadísticamente que una solución es mejor
-		            que otra. Si se desea obtener un escenario "ganador” será necesario realizar más
+		            que otra. Si se desea obtener un escenario ``ganador'' será necesario realizar más
 		            réplicas de cada modelo o incrementar el tiempo de simulación de cada corrida.
 		            Con ello se busca acortar los intervalos de confianza de las soluciones finales y,
 		            por consiguiente, incrementar la probabilidad de diferenciar las soluciones.
@@ -297,7 +297,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            Esta documentación es muy importante, pues permitirá el uso del modelo
 		            generado en caso de que se requieran ajustes futuros. En ella se deben incluir los
 		            supuestos del modelo, las distribuciones asociadas a sus variables, todos sus
-		            alcances y limitaciones y, en general, la totalidad de las consideraciones de .
+		            alcances y limitaciones y, en general, la totalidad de las consideraciones de programación.
 		            También es importante incluir sugerencias tanto respecto del uso del
 		            modelo como sobre los resultados obtenidos, con el propósito de realizar un
 		            reporte más completo. Por último, deberán presentarse las conclusiones del
